feat: 1st pass wiring up Bolt custom Grid and Cell tags using new Class based extension system; adding workaround to autoloading, removing old extension tags being replaced

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   "autoload": {
     "psr-0": {
       "Drupal\\Core\\": "src/libs/",
-      "Drupal\\Core\\Template\\": "src/libs/"
+      "Drupal\\Core\\Template\\": "src/libs/",
+      "Bolt\\Layout\\": "src/libs/"
     },
     "psr-4": {
       "Bolt\\": "src/"
