Changing \Bolt\Layout to use psr-4 like \Bolt instead of psr-0

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
   "autoload": {
     "psr-0": {
       "Drupal\\Core\\": "src/libs/",
-      "Drupal\\Core\\Template\\": "src/libs/",
-      "Bolt\\Layout\\": "src/libs/"
+      "Drupal\\Core\\Template\\": "src/libs/"
     },
     "psr-4": {
       "Bolt\\": "src/"
