Adding \Drupal\Core\Template back into bolt/core-php

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   "autoload": {
     "psr-4": {
       "Bolt\\": "src/",
-      "Drupal\\Core\\": "src/libs/Drupal"
+      "Drupal\\Core\\": "src/libs/Drupal",
+      "Drupal\\Core\\Template\\": "src/libs/Drupal/Template"
     }
   },
   "require": {
