Fixing relative Drupal Namespace usage.

--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,7 @@
   "autoload": {
     "psr-4": {
       "Bolt\\": "src/",
-      "Drupal\\Core\\": "src/libs/Drupal",
-      "Drupal\\Core\\Template\\": "src/libs/Drupal/Template"
+      "Drupal\\Core\\": "src/libs/Drupal/Core/"
     }
   },
   "require": {
