--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,8 @@
     "drupal/core-render": "8.4.x-dev",
     "drupal/core-utility": "8.4.x-dev",
     "webmozart/path-util": "^2.3",
-    "shudrum/array-finder": "^1.1"
+    "shudrum/array-finder": "^1.1",
+    "gregwar/image": "^2.0",
+    "ksubileau/color-thief-php": "^1.3"
   }
 }
