--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
     }
   },
   "require": {
+    "bolt/core-php": "^0.9.0",
     "twig/twig": "^1.0",
     "basaltinc/twig-tools": "^1.3.2",
     "michelf/php-markdown": "^1.8.0",
@@ -37,5 +38,11 @@
     "shudrum/array-finder": "^1.1",
     "gregwar/image": "^2.0",
     "ksubileau/color-thief-php": "^1.3"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7"
+  },
+  "scripts": {
+    "test": "phpunit --colors=always tests"
   }
 }
