--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bolt-design-system/core-php",
   "description": "Core PHP functionality for Bolt",
-  "version": "0.9.0",
+  "version": "1.0.0-rc.6",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -27,7 +27,6 @@
     }
   },
   "require": {
-    "bolt-design-system/core-php": "^0.9.0",
     "twig/twig": "^1.0",
     "basaltinc/twig-tools": "^1.3.4",
     "michelf/php-markdown": "^1.8.0",
