--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bolt-design-system/core-php",
   "description": "Core PHP functionality for Bolt",
-  "version": "2.0.0-beta.2",
+  "version": "2.0.0",
   "type": "library",
   "license": "MIT",
   "authors": [
