--- a/composer.json
+++ b/composer.json
@@ -27,12 +27,14 @@
     "shudrum/array-finder": "^1.1",
     "gregwar/image": "^2.0",
     "tooleks/php-avg-color-picker": "^1.1.2",
-    "asm89/twig-lint": "^1.0"
-  },
-  "require-dev": {
+    "asm89/twig-lint": "^1.0",
     "phpunit/phpunit": "^7"
   },
   "scripts": {
-    "test": "phpunit --colors=always tests"
+    "setup": "@composer install --no-interaction --prefer-dist --no-progress",
+    "test": [
+      "@composer install --no-interaction --prefer-dist --no-progress",
+      "vendor/bin/phpunit --colors=always tests"
+    ]
   }
 }
