--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bolt/core-php",
-  "version": "2.2.2",
+  "version": "2.3.0-rc.0",
   "license": "MIT",
   "description": "Core PHP Library",
   "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/core-php",
@@ -17,5 +17,6 @@
   "scripts": {
     "postinstall": "composer run setup"
   },
-  "homepage": "https://boltdesignsystem.com"
+  "homepage": "https://boltdesignsystem.com",
+  "gitHead": "b47538629e315eeecbdfcb8d0c22e787b3bcc089"
 }
