fix: update npm scripts to not use postinstall automatically; add postinstall to root of the repo instead

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "access": "public"
   },
   "scripts": {
-    "postinstall": "composer run setup"
+    "setup": "composer run setup"
   },
   "homepage": "https://boltdesignsystem.com",
   "gitHead": "b47538629e315eeecbdfcb8d0c22e787b3bcc089"
