fix: remove gitHead from packages before publishing v2.3.0

--- a/package.json
+++ b/package.json
@@ -17,6 +17,5 @@
   "scripts": {
     "setup": "composer run setup"
   },
-  "homepage": "https://boltdesignsystem.com",
-  "gitHead": "b47538629e315eeecbdfcb8d0c22e787b3bcc089"
+  "homepage": "https://boltdesignsystem.com"
 }
