--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
     "gregwar/image": "^2.0",
     "tooleks/php-avg-color-picker": "^1.1.2",
     "asm89/twig-lint": "^1.0",
-    "phpunit/phpunit": "^7",
-    "nabil1337/case-helper": "^0.1.0"
+    "phpunit/phpunit": "^7"
   },
   "scripts": {
     "setup": "@composer install --no-interaction --prefer-dist --no-progress",
