refactor: misc devops config updates + defer some of the Travis CI updates

--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,9 @@
     "tooleks/php-avg-color-picker": "^1.1.2",
     "phpunit/phpunit": "^7"
   },
+  "suggest": {
+    "bolt-design-system/drupal-twig-extensions": "*"
+  },
   "scripts": {
     "setup": "@composer install --no-interaction --prefer-dist --no-progress",
     "test": [
