--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,7 @@
   "version": "2.3.0",
   "type": "library",
   "license": "MIT",
-  "authors": [
-    {
+  "authors": [{
       "name": "Salem Ghoweri",
       "role": "Maintainer"
     },
@@ -28,8 +27,10 @@
     "gregwar/image": "^2.0",
     "tooleks/php-avg-color-picker": "^1.1.2",
     "asm89/twig-lint": "^1.0",
-    "phpunit/phpunit": "^7",
     "nabil1337/case-helper": "^0.1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^7"
   },
   "scripts": {
     "setup": "@composer install --no-interaction --prefer-dist --no-progress",
