--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     }
   },
   "require": {
-    "twig/twig": "^1.0",
+    "twig/twig": "1.36.0",
     "basaltinc/twig-tools": "^1.4.0",
     "michelf/php-markdown": "^1.8.0",
     "mexitek/phpcolors": "^0.4.0",
