chore: sync inner package versions + add missing descriptions and keywords

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "bolt-design-system/core-php",
-  "description": "Core PHP functionality for Bolt",
+  "description": "Core PHP functionality for the Bolt Design System",
   "version": "2.4.0-beta.0",
   "type": "library",
   "license": "MIT",
