DS-745: Update composer files to use master branch of twig-tools fork

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     }
   },
   "require": {
-    "basaltinc/twig-tools": "dev-feature/remove-faker as 1.4.3",
+    "basaltinc/twig-tools": "dev-master as 1.4.3",
     "michelf/php-markdown": "^1.8.0",
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1",
