--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     "gregwar/image": "^2.0",
     "nabil1337/case-helper": "^0.1.0",
     "mexitek/phpcolors": "^0.4.0",
-    "twig/twig": "v2.14.11"
+    "twig/twig": "^2.14.11"
   },
   "require-dev": {
     "phpunit/phpunit": "^7"
