--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     }
   },
   "require": {
-    "basaltinc/twig-tools": "dev-master as 1.4.3",
+    "basaltinc/twig-tools": "1.4.5",
     "michelf/php-markdown": "^1.8.0",
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1",
