--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bolt-design-system/core-php",
   "description": "Core PHP functionality for the Bolt Design System",
-  "version": "5.9.2",
+  "version": "5.9.1",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -16,7 +16,7 @@
   "repositories": [
     {
       "type": "vcs",
-      "url": "https://github.com/sreenivasulu-paruchuri/twig-tools.git",
+      "url": "https://github.com/boltdesignsystem/twig-tools",
       "no-api": true
     }
   ],
@@ -26,7 +26,7 @@
     }
   },
   "require": {
-    "basaltinc/twig-tools": "1.4.4",
+    "basaltinc/twig-tools": "dev-master as 1.4.3",
     "michelf/php-markdown": "^1.8.0",
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1",
