--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "bolt-design-system/core-php",
   "description": "Core PHP functionality for the Bolt Design System",
-  "version": "5.9.2",
+  "version": "8.0.0",
   "type": "library",
   "license": "MIT",
   "authors": [
@@ -14,11 +14,6 @@
     }
   ],
   "repositories": {
-    "boltvcs": {
-      "type": "vcs",
-      "url": "https://github.com/sreenivasulu-paruchuri/twig-tools.git",
-      "no-api": true
-    },
     "shudrum/array-finder": {
       "type": "git",
       "url": "https://github.com/atomiix/ArrayFinder.git"
@@ -30,7 +25,7 @@
     }
   },
   "require": {
-    "basaltinc/twig-tools": "1.4.4",
+    "basaltinc/twig-tools": "^1.4.0 || ^8.0",
     "michelf/php-markdown": "^1.8.0",
     "webmozart/path-util": "^2.3",
     "shudrum/array-finder": "^1.1",
