--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@bolt/core-php",
-  "version": "5.9.1",
+  "version": "8.0.0",
   "description": "Core PHP Library",
   "homepage": "https://boltdesignsystem.com",
-  "repository": "https://github.com/bolt-design-system/bolt/tree/master/packages/core-php",
+  "repository": "https://gitlab.com/pegadigital/bolt/core-php",
   "license": "MIT",
   "scripts": {
     "setup": "composer run setup"
